--- a/requirements.txt
+++ b/requirements.txt
@@ -16,6 +16,7 @@ defusedxml==0.7.1
 Django==4.2
 django-cors-headers==3.14.0
 django-phone-field==1.8.1
+django-redis==5.3.0
 djangorestframework==3.14.0
 djangorestframework-simplejwt==5.2.2
 drf-yasg==1.21.5
